syntax = "proto3";
package schemasvc;
option go_package = "kwil/x/proto/schemapb";

message PlanSchemaRequest {
  string wallet = 1;
  string database = 2;
  bytes schema = 3;
}

message PlanSchemaResponse {
  Plan plan = 1;
}

message Plan {
  string plan_id = 1;
	string version = 2;
	string name = 3;
  repeated Change changes = 4;
}

message Change {
  string cmd = 1;
  string comment = 2;
  string reverse = 3;
}

message ApplySchemaRequest {
  string plan_id = 1;
}

message ApplySchemaResponse {}

message GetMetadataRequest {
  string wallet = 1;
  string database = 2;
}

message GetMetadataResponse {
  Metadata metadata = 1;
}

message Metadata {
  string name = 1;
  repeated Table tables = 2;
  repeated Query queries = 3;
  repeated Role roels = 4;
}

message Table {
  string name = 1;
  repeated Column columns = 2;
}

message Column {
  string name = 1;
  string type = 2;
  bool nullable = 3;
}

message Query {
  string name = 1;
  string statement = 2;
}

message Role {
  string name = 1;
  repeated string queries = 2;
}
